azuredeployvm.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#", //Plantilla
    "contentVersion": "1.0.0.0", 
    "parameters": {
      "vmName": {
        "minLength": 3,
        "maxLength": 24,
        "type": "String",
        "metadata": {
          "description":"Nombre de la VM."
        }
      },
      "adminUsername": {
        "type": "String",
        "metadata": {
          "description": "Nombre admin para máquina virtual."
        }
      },
      "adminPassword": {
        "minLength": 12,
        "type": "SecureString", // Para mayor seguridad
        "metadata": {
          "description": "Password admin para máquina virtual"
        }
      },
      "location": {
        "defaultValue": "EastUS 2", // El recurso heredara por defecto la zona del grupo de recursos
        "type": "String",
        "metadata": {
          "description": "Localización del recurso."
        }
      },
      "vmSize": {
        "defaultValue": "Standard_D4ds_v4",
        "type": "String",
        "metadata": {
          "description": "Tamaño de la familia."
        }
      },
      "privateIPAllocationMethod":{
        "type": "String",
        "defaultValue":"Dynamic",
        "allowedValues": [
          "Dynamic",
          "Static"
        ],
        "metadata": {
          "description": "Método de asignación de IP privada (Dynamic o Static)."
        }
      },
      "resourceTags": { //Tags
        "type": "object",
        "defaultValue": {
          "AMBIENTE": "PRODUCCIÓN",
          "RESPONSABLE": "Carlos C"
        },
        "metadata": {
          "description": "Etiquetas"
        }
      }
    },
    "variables": { //Variables Globales.
      "publicIpAddresses": "vm-clubgenland-prod-ip",
      "nSecurityGroups": "vm-clubgenland-prod-nsg"
    },
    "resources": [
      {
        "type": "Microsoft.Network/publicIpAddresses", //IP Pública
        "apiVersion": "2019-02-01",
        "name": "[variables('publicIpAddresses')]",
        "location": "[parameters('location')]",
        "tags": "[parameters('resourceTags')]",
        "properties": {
          "publicIPAllocationMethod": "[parameters('privateIPAllocationMethod')]"
        }
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups", //NSG
        "apiVersion": "2021-02-01",
        "name": "[variables('nSecurityGroups')]",
        "location": "[parameters('location')]",
        "tags": "[parameters('resourceTags')]",
        "properties": {
          "securityRules": [ // Reglas de seguridad de entrada
            {
              "name": "Port_22",
              "properties": {
                "priority": 300,
                "protocol": "Tcp",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "22"
              }
            },
                        {
              "name": "Port_57032",
              "properties": {
                "priority": 310,
                "protocol": "Tcp",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "57032"
              }
            },
            {
              "name": "Port_80",
              "properties": {
                "priority": 320,
                "protocol": "Tcp",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "80"
              }
            },
            {
              "name": "Port_443",
              "properties": {
                "priority": 330,
                "protocol": "Tcp",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "443"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2019-02-01",
        "name": "vm-clubgenland-intred",
        "location": "[parameters('location')]",
        "tags": "[parameters('resourceTags')]",
        "dependsOn": [
          // "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks'))]",
          "[resourceId('Microsoft.Network/publicIpAddresses', variables('publicIpAddresses'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nSecurityGroups'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "[parameters('privateIPAllocationMethod')]",
                "subnet": { //Se emplea el id que mapea el id de la suscrión, el grupo de recursos y recursos de donde proviene la Virtual Network a utilizar.
                  "id": "/subscriptions/d6ab5289-f31f-41b4-b9ec-415941b1c89f/resourceGroups/rg-srvlinux-prd/providers/Microsoft.Network/virtualNetworks/vnet-srvlinux-prd/subnets/snet-srvlinux-prd"
                },
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('publicIpAddresses'))]"
                }
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nSecurityGroups'))]"
          }
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines", //Creación de la VM
        "apiVersion": "2021-04-01",
        "name": "[parameters('vmName')]",
        "location": "[parameters('location')]",
        "tags": "[parameters('resourceTags')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkInterfaces', 'vm-clubgenland-intred')]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nSecurityGroups'))]"
        ],
        "properties": {
          "hardwareProfile": { //Tamaño de la VM
            "vmSize": "[parameters('vmSize')]"
          },
          "storageProfile": { //Sistema Operativo
            "imageReference": {
              "publisher": "RedHat",
              "offer": "RHEL",
              "sku": "93-gen2",
              "version": "latest",
              "exactVersion": "9.3.2023110915"
            },
            "osDisk": {
              "createOption": "fromImage",
              "managedDisk": {
                "storageAccountType": "StandardSSD_LRS"
              },
              "diskSizeGB": 64,
              "name": "osdisk-vm-clubgenland-prod" 
            }, 
            "dataDisks": [ //Creación de un disco adicional
              {
                "name": "datadisk-vm-clubgenland-prod",
                "lun": 0,
                "createOption": "Empty", 
                "managedDisk": {
                  "storageAccountType": "StandardSSD_LRS"
                },
                  "diskSizeGB": 128 // Tamaño del disco adicional en GB
                }
            ]
          },       
          "osProfile": { //Crear el perfil en el sistema de la VM
            "computerName": "[parameters('vmName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "securityProfile": { //Inicio seguro
            "uefiSettings": {
                "secureBootEnabled": true,
                "vTpmEnabled": true
            },
            "securityType": "TrustedLaunch"
        },
          "networkProfile": {
            "networkInterfaces": [ //Utiliza la interfaz de red para la VM
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces', 'vm-clubgenland-intred')]"
              }
            ]
          }
        }
      }
    ]
  }
